2014-06-26 Fred Gleason <fredg@paravelsystems.com>
	* Initial package creation
2014-06-26 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'CmdSwitch' class in 'syd/cmdswitch.cpp'
	and 'syd/cmdswitch.h'.
	* Added a 'Profile' class in 'syd/profile.cpp'
	and 'syd/profile.h'.
2014-06-26 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'Routing' class in 'syd/routing.cpp' and
	'syd/routing.h'.
2014-06-26 Fred Gleason <fredg@paravelsystems.com>
	* Implemented an LWRP server in 'syd/lwpr.cpp' and
	'syd/lwrp.h'.
2014-06-27 Fred Gleason <fredg@paravelsystems.com>
	* Implemented RTP relaying in 'syd/rtp.cpp' and 'syd/rtp.h'.
2014-06-27 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'syd/lwtag.cpp' where type 8 tags were not
	initialized properly.
2014-06-27 Fred Gleason <fredg@paravelsystems.com>
	* Modified advertising generation routines in 'lwrp.cpp' to
	support multiple sources.
2014-06-27 Fred Gleason <fredg@paravelsystems.com>
	* Changed SWITCHYARD_ROUTING_FILE to
	'/var/cache/aoip/routing.db' in 'syd/config.h'.
2014-06-27 Fred Gleason <fredg@paravelsystems.com>
	* Fixed warning in 'syd/lwsource.cpp'.
	* Disabled strict aliasing warning in 'syd/Makefile.am'.