@@ -18,9 +18,11 @@
 #define SWITCHYARD_LWRP_PORT 93
 #define SWITCHYARD_PROTOCOL_VERSION "1.1"
 #define SWITCHYARD_ROUTING_FILE "/var/cache/aoip/routing.db"
+#define SWITCHYARD_SOURCES_FILE "/var/cache/aoip/sources.db"
 #define SWITCHYARD_RTP_PORT 5004
 #define SWITCHYARD_SLOTS 2
 #define SWITCHYARD_SHM_KEY 0x59D2B831
+#define SWITCHYARD_SAVESOURCES_INTERVAL 5000
 
 extern bool global_exiting;
 
