@@ -26,12 +26,16 @@ class LwSource
   LwSource();
   QHostAddress nodeAddress() const;
   void setNodeAddress(const QHostAddress &addr);
+  QString nodeName() const;
+  void setNodeName(const QString &str);
   unsigned slot() const;
   void setSlot(unsigned slot);
   unsigned sourceNumber() const;
   void setSourceNumber(unsigned streamno);
   QHostAddress streamAddress() const;
   void setStreamAddress(const QHostAddress &addr);
+  QString sourceName() const;
+  void setSourceName(const QString &str);
   HardwareType hardwareType() const;
   void setHardwareType(HardwareType type);
   StreamType streamType() const;
@@ -40,16 +44,21 @@ class LwSource
   int lastTouched(const QDateTime &datetime) const;
   void touch();
   void touch(const QDateTime &datetime);
+  bool isChanged() const;
+  void setSaved();
   static QString hardwareString(HardwareType type);
 
  private:
   QHostAddress src_node_address;
+  QString src_node_name;
+  QString src_source_name;
   unsigned src_slot;
   unsigned src_source_number;
   QHostAddress src_stream_address;
   HardwareType src_hardware_type;
   StreamType src_stream_type;
   QDateTime src_datetime;
+  bool src_is_changed;
 };
 
 
